# datagen-python

./: pyproject.toml
datagen/: __init__.py  api.py  checkpoint.py  cli.py  config.py  messages.py  openrouter.py  progress.py
datagen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_api.py  test_checkpoint.py  test_cli.py  test_config.py  test_messages.py  test_openrouter.py  test_progress.py
